# csp0-tui

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml  serve.toml
app/: app.py  app.tcss  auth.py  base.py  cache.py  exceptions.py  jwt.py  screen_state.py  ticket.py  user.py
app/widgets/: chat.py  login.py  match.py
tests/: conftest.py  test_app.py  test_login.py
